@@ -71,8 +71,8 @@
             <zipfileset src="${src}/jp1parallel.zip" includes="jp1parallel.dll" prefix="Windows-x86"/>
 			<zipfileset src="${src}/jp1parallel.zip" includes="libjp1parallel.so" prefix="Linux-i386" filemode="755"/>
 			<zipfileset src="${src}/par64.zip" includes="libjp1parallel.so" prefix="Linux-amd64" filemode="755"/>
-            <zipfileset src="${src}/jp12serial021.zip" includes="**/*.dll"/>
-			<zipfileset src="${src}/jp12serial021.zip" includes="**/*.so,**/*.jnilib" filemode="755"/>
+            <zipfileset src="${src}/jp12serial022.zip" includes="**/*.dll"/>
+			<zipfileset src="${src}/jp12serial022.zip" includes="**/*.so,**/*.jnilib" filemode="755"/>
             <zipfileset src="${src}/jp1usb_dll_031.zip" includes="jp1usb.dll" prefix="Windows-x86"/>
 			<zipfileset src="${src}/DecodeIR_245.zip" includes="**/libDecodeIR.so,**/libDecodeIR.jnilib" filemode="755"/>
 			<zipfileset src="${src}/DecodeIR_245.zip" includes="**/DecodeIR.dll,DecodeIR.html,Docs/*.txt" filemode="555"/>
