@@ -116,7 +116,17 @@
 #                  by that number.
 #              * If n followed by a number, the choice is changed, but is hidden if
 #                  the selected DevParm is blank.
-#      ParmInitializer(cmdNdx,devNdx,bitPos,bitCnt)
+#      ParmInitializer(cmdNdx,devNdx,bitPos,bitCnt) also modifies a list of choices, but it does
+#          so from a single DevParm value.  PickInitializer() handles the situation where
+#          alternative device codes are specified in the list of DevParms and bits in a CmdParm
+#          select between the alternatives.  ParmInitializer() handles the situation where the
+#          higher order bits in the device code are explicitly specified in a CmdParm.  It creates
+#          a choice list in which the higher order bits of a single DevParm value are overridden
+#          by all possible values for those bits, in increasing numerical order.
+#          -- cmdNdx selects the CmdParms item containing a list of choices.
+#          -- devNdx selects the DevParms item that specifies a base value.
+#          -- bitPos specifies the lowest bit of the DevParm value that is to be overridden.
+#          -- bitCnt specifies how many bits are to be overridden.            
 # Type=className the name of the class used to drive the KeyMapMaster protocol
 #      specific function.  If the class cannot be instantiated,
 #      the protocol will not be available in KeyMapMaster.  The protocol must
@@ -1402,16 +1412,22 @@ Code.TI2541=01 07 01 21 21 10 26 00 72 00 26 00 26 00 DD 07 BE 00 72 00 5D 34 02
 PID=01 12
 DevParms=Device:7=71,OBC>127:No|Yes
 DeviceTranslator=Translator(1,1) GrundigXlator(0,6,2)
-CmdParms=OBC:7=0
-CmdTranslator=GrundigXlator(0,7,0)
+CmdParmInit=ParmInitializer(0,0,6,1)
+CmdParms=Device:Dev.1|Dev.2,OBC:8=0
+CmdTranslator=GrundigXlator(1,7,0) Translator(0,1,6) 
 FixedData=0E
 Notes=The full range of OBC values for the Grundig16 protocol is 0-255, but the UEI executor for PID 0112 \
-is not capable of supporting values > 127 and those <= 127 with the same device code.  The Setup page for \
-this protocol has an entry to specify which of these you wish to support with this device code.  If you \
-set "OBC>127" to "Yes" then the values you enter in the OBC column of the Functions page must be the \
-the excess over 128.\n\nYou can also enter hex codes directly in the Hex column, but only 128 of the possible \
-256 hex values are valid.  Which hex values are valid depends on the Device code.  If you enter an invalid \
-hex value, it will be changed automatically to a valid one.
+is not capable of supporting the ranges 0-127 and 128-255 with the same device code.  The Setup page for \
+this protocol has an entry to specify which of these you wish to support with this device code.\n\n\
+The range of values for the device code is 0-127.  The value set on the Setup page is a default value but \
+whatever value you set, the value in this range that differs by 64 is also available.  The Functions page \
+for this protocol has a Device column that lets you choose between these two values, separately for each \
+function, by a drop-down box.\n\nThere are three entries in the drop-down list, two are the two explicit values \
+differing by 64 and the other is blank.  The blank entry represents the default value, i.e. the value specified \
+on the Setup page.  It is what is shown for new functions.  Once you complete the function entry it will change \
+to display the default value.  If you explicitly select the blank value from the drop-down list, it will leave \
+the current value unchanged.  Please note that changing between the two available device codes will also change \
+the OBC.  You may, of course, then change the OBC back to its previous value without affecting the new device code.
 Code.S3C80=47 95 11 8B 13 00 01 97 05 C8 02 A1 01 29 02 4E 00 DB 02 2A 03 7A 04 6A 76 00 01 6B 03 B6 03 40 1C 12 F6 01 4C 1E F6 01 64 38 03 5C 01 F6 7D 57 48 C3 38 04 5C 04 F6 7D 57 38 C4 5C 03 F6 7D 57 C6 F8 70 26 F6 01 58 F6 01 0A 7B D4 AF 90 C3 7B 16 90 C3 7B 0C 1C 22 F6 01 6D 1C 1A F6 01 64 8B 1C 1C 1E 6C 1E 8B 0E 90 C3 7B 06 1C 1C 6C 20 8B 04 1C 20 6C 1C F6 7D 8A 18 C6 F6 7D 8A 5A CE AF F6 01 6D 1C 18 8D 01 64
 Code.HCS08=20 18 24 4C 11 00 01 89 05 F7 02 93 00 FC 01 1A 02 4C 02 3F 03 9C 00 00 04 8B 01 B3 06 B6 60 A8 40 B7 60 AE 6A CD FF 65 AE 6E CD FF 68 4E 60 53 6E 01 55 AD 1F 4E 53 54 4E 61 53 6E 04 55 AD 14 4E 54 53 6E 03 55 AD 0C 45 70 26 CD FF 74 CD FF 92 25 D0 81 0E 53 19 0C 53 0C AE 7C CD FF 83 AE 76 CD FF 68 20 1F AE 74 AD 23 AE 74 AD 1F 20 15 0C 53 0A AE 70 AD 16 AE 78 AD 12 20 08 AE 78 AD 0C AE 70 AD 08 39 53 39 53 3B 55 C8 81 CD FF 83 AE 72 CD FF 68 81
 Code.MAXQ610=36 70 11 16 1D 00 DC 05 30 00 00 00 26 70 15 00 2A 00 EF 00 3F 02 8F 03 7E 04 C0 80 08 56 08 E0 01 17 D0 D0 40 02 10 00 4E 8D 89 8D 01 08 18 4E D0 3F 43 3D 8A 8A C0 0B 00 1A 00 2B 0A 89 D1 3F 3C 3D 8A 8A FF 0B 00 1A CA 8A CA 8A 89 AA 00 2B 0A 89 D0 3F 32 3D 3F 1A 89 AA 00 2B 0A 89 08 6D 1C 4E 55 3F 18 0A 2B 3D 07 09 2B 3D 55 3F 19 0A 26 3D 08 09 26 3D 55 3F 1A 0A 21 3D 07 09 21 3D 89 8A 5A 8A 0A 2C 5A 8A 04 2C 00 2B 0A 89 1B 3D 0D 0C 00 2B 0A 89 21 3D 09 0C 5A 8A 04 2C 00 2B 0A 89 2F 3D 03 0C 00 2B 0A 89 3F 3D E9 4D 05 09 08 3D 00 2B 0D 89 0D CE 0D 8C 01 0B 2B 0C 01 0B 25 0C 01 0B 35 0C 55 3F 22 0A F9 3D 08 09 F9 3D 55 3F 1E 0A F4 3D 07 09 F4 0C 55 3F 20 0A EF 3D 08 09 EF 3D 55 3F 1D 0A EA 3D 07 09 EA 3D 55 3F 20 0A E5 3D 08 09 E5 3D 55 3F 1D 0A E0 3D 07 09 E0 0C 55 3F 1F 0A DB 3D 08 09 DB 3D 55 3F 1D 0A D6 3D 07 09 D6 3D 55 3F 21 0A D1 3D 08 09 D1 3D 55 3F 1D 0A CC 3D 07 09 CC 0C 55 3F 21 0A C7 3D 08 09 C7 3D 55 3F 1D 0A C2 3D 07 09 C2 3D 55 3F 1F 0A BD 3D 08 09 BD 3D 55 3F 1D 0A B8 3D 07 09 B8 0C
